# cwm-ddv

./: docker-compose.yml  readme.md
api/: .gitignore  asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
api/cwm_ddv/: manage.py
api/cwm_ddv/cwm_ddv/: asgi.py  settings.py  urls.py  wsgi.py
api/v1/: models.py  serializers.py  views.py
api/v1/migrations/: 0001_initial.py
client/: package.json
client/src/: App.vue
client/src/components/: EntityView.vue  HelloWorld.vue  HomeView.vue  LoginForm.vue
client/src/router/: index.js
client/src/store/: index.js
client/src/views/: Home.vue  Login.vue
